CSS and responsive

--- a/front/src/assets/css/style.css
+++ b/front/src/assets/css/style.css
@@ -9,8 +9,9 @@
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
   color: #ffffff;
-  margin: -8px;
+  margin: 0;
   background-color: var(--base);
+  
 }
 
 #nav {
@@ -24,6 +25,7 @@
 #nav a {
   font-weight: bold;
   color: #2c3e50;
+  font-size: 18px;
 }
 
 #nav a.router-link-exact-active {
